--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ margin-right:10%;
 }
 
 .home-icon{
-  position: absolute;
+  position: fixed;
   width: 10%;
   height: auto;
   margin: 0;
@@ -97,5 +97,19 @@ margin-right:10%;
 }
 
 iframe{
+  z-index: 20;
+  margin-left: auto;
+  border: none;
+  margin-right: auto;
+  position: absolute;
+
+}
+
+.video-container{
+  width: 100%;
+  height: 100%;
   z-index: 10;
+  position: absolute;
+
+
 }
